--- a/README
+++ b/README
@@ -32,6 +32,8 @@ If the maas ephemeral data is up to date with the latest cloud image daily
 then meph2-cloudimg-sync will not do anything.  In order to force it to
 do something, you can either
 a.) pass '--target=force'
+    This will re-generate the latest image from cloud-images.ubuntu.com
+    in order to do more than the latest, use '--max=N'.
 b.) point it at out locally crafted ephemeral data that does not contain that.
 
   orig_eurl=http://maas.ubuntu.com/images/ephemeral-v2/daily/streams/v1/index.json
