add '--rebuild' flag to cloudimg-sync
This allows you to build YYYYMMDD.1 if there is already
a maas image of YYYYMMDD for the latest cloud image YYYYMMDD.

Essentially, allowing a forced rebuild of a maas image even
if the sync doesn't think there is one needed.  I added this
as the 'maas-images' codebase created a bug in the 20160119
maas image, and wanted to create a 20160119.1 with the fix there.

that can now be accomplished with:
   meph2-cloudimg-sync -vvv --rebuild 20160119:20160119.1 \
     /tmp/out.d arch=amd64 release=trusty

bzr-revno: 263

--- a/README
+++ b/README
@@ -52,6 +52,10 @@ To force a build, use '--target=force'
   then meph2-cloudimg-sync will not do anything.  In order to force it to
   do something, you can either
 
+In order to 'rebuild' something.  To create a new '20160101.1' even when
+there is an existing '20160101' maas image and the latest cloud image
+is 20160101, then pass '--rebuild=20160101:20160101.1'.
+
 === debugging ===
 To debug and use the fake 'maas-cloudimg2eph2', run like:
   env MAAS_CLOUDIMG2EPH2=fake-maas-cloudimg2eph2 meph2-cloudimg-sync out.d
