Cleanup: be more specific about what should be created.
This puts more information in the config files on what output is expected.
Previously we were relying on the input type format in some cases to
determine what output to create.

The desire to do this was really to safely add '--no-gzip'
to the maas-cloudimg2eph2 if we were going to throw away the root-image.gz.
The gzip of root-image.gz would typically take > 2 minutes and then
the output would be promptly thrown away.

Now, in the configs we have:
 meph-v2.yaml:
   squashfs: False
   root_image: True
   enable_di: True

 meph-v3.yaml:
   squashfs: True
   root_image: False
   enable_di: False

There is one inconsitency there that we've addressed with an 'if release'
section in the code. meph-v3.yaml will build a root image for trusty.

Also added here is information about 'known_callers' and the start of
a shell test suite. At very least it allowed me to manually verify the
output of a before and after run.

Ideally we'd have tests that assert files created and contents look good.

--- a/README
+++ b/README
@@ -23,7 +23,7 @@ You must provide a url or file to use as the source image.
 
 example:
   $ burl=http://cloud-images.ubuntu.com/daily/server/
-  $ meph2-build amd64 xenial 20160101 \
+  $ meph2-build --config=conf/meph-v3.yaml amd64 xenial 20160101 \
      $burl/xenial/current/xenial-server-cloudimg-amd64-root.tar.xz \
      xenial-output.d/
 
@@ -32,7 +32,9 @@ The 'version' provided is a serial (YYYYMMDD such as 20160101).
 source-image can be either a url or a local file of type 
   '.tar.gz', '-root.tar.gz', or '-root.tar.xz' or '.img'
 
-In order to collect debian installer data you will need '--enable-di'.
+Note, using conf/meph-v2.yaml will build the v2 format stream
+and will include d-i kernels and initramfs.  To disable that, use
+--disable-di.
 
 === syncing against cloud-images.ubuntu.com ===
 This will pull the latest images down from cloud-images.ubuntu.com
@@ -222,3 +224,25 @@ its usage is fairly simple.
    s: seconds
 
 The default is '3d'.
+
+=== Known callers ===
+This is just a list of known callers to reference when changing things.
+
+ - MAAS c-i uses meph2-cloudimg-sync
+   meph2-cloudimg-sync --config=conf/meph-v3.yaml \
+      --target=force [--proposed] --arches=arch1,arch2 \
+      --max=1 out.d/ 'release~(xenial|bionic)'
+ - cloud image build process maas v2
+    meph2-build --image-format squashfs-image -vv --enable-di \
+       amd64 bionic 20181018 livecd.ubuntu-cpc.squashfs binary/maas/
+ - cloud image build  process maas v3
+    meph2-build --config conf/meph-v3.yaml \
+       --image-format squashfs-image -vv \
+       amd64 bionic 20181018 livecd.ubuntu-cpc.squashfs binary/maas_v3/
+
+Trusty images are built like this:
+ - v2 (jenkins_kvm/templates/img-maasv2.tmpl):
+    meph2-cloudimg-sync -vvv out.d arch=amd64 release=trusty
+ - v3:
+    meph2-cloudimg-sync --config=conf/meph-v3.yaml -vvv out.d \
+       arch=$arch release=trusty
